add reference to DESCRIPTION

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,3 +1,15 @@
+@article{acerbi2002expected,
+  title={Expected shortfall: a natural coherent alternative to value at risk},
+  author={Acerbi, Carlo and Tasche, Dirk},
+  journal={Economic notes},
+  volume={31},
+  number={2},
+  pages={379--388},
+  year={2002},
+  doi = (10.1111/1468-0300.00091),
+  url = {https://arxiv.org/pdf/cond-mat/0105191.pdf},
+}
+
 @Manual{PerformanceAnalytics2018,
   title = {PerformanceAnalytics: Econometric Tools for Performance and Risk Analysis},
   author = {Brian G. Peterson and Peter Carl},
@@ -25,3 +37,4 @@
   pages = {38},
   url = {http://www.jstatsoft.org/v25/i07},
 }
+
