--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -6,7 +6,7 @@
   number={2},
   pages={379--388},
   year={2002},
-  doi = (10.1111/1468-0300.00091),
+  doi = {10.1111/1468-0300.00091},
   url = {https://arxiv.org/pdf/cond-mat/0105191.pdf},
 }
 
