experiment with pkgdown

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -11,7 +11,7 @@
 }
 
 @Manual{PerformanceAnalytics2018,
-  title = {PerformanceAnalytics: Econometric Tools for Performance and Risk Analysis},
+  title = {PerformanceAnalytics: $P$ Econometric Tools for Performance and Risk Analysis},
   author = {Brian G. Peterson and Peter Carl},
   year = {2018},
   note = {R package version 1.5.2},
