correct a messed up link

--- a/README.org
+++ b/README.org
@@ -19,6 +19,7 @@
 #
 # [![lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
 
+# [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/Rdpack)](https://cran.r-project.org/package=Rdpack)
 [[https://cran.r-project.org/package=Rdpack][http://www.r-pkg.org/badges/version/Rdpack]]
 
 # [[https://www.r-pkg.org/badges/version/readxl][CRAN\_Status\_Badge]
@@ -26,7 +27,7 @@
 # [[https://cran.r-project.org/package=Rdpack]
 
 
-** Overviewmm
+** Overview
 
 Compute expected shortfall (ES) and Value at Risk (VaR) from a
 quantile function, distribution function, random number generator or
