correct a messed up link

--- a/README.org
+++ b/README.org
@@ -21,7 +21,7 @@
 
 # [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/Rdpack)](https://cran.r-project.org/package=Rdpack)
 #+BEGIN_EXPORT html
-[![CRANStatusBadge](http://www.r-pkg.org/badges/version/Rdpack)](https://cran.r-project.org/package=Rdpack)
+[![CRANStatusBadge](http://www.r-pkg.org/badges/version/cvar)](https://cran.r-project.org/package=cvar)
 #+END_EXPORT
 
 
