add travis-ci build token

--- a/README.org
+++ b/README.org
@@ -22,6 +22,7 @@
 # [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/Rdpack)](https://cran.r-project.org/package=Rdpack)
 #+BEGIN_EXPORT html
 [![CRANStatusBadge](http://www.r-pkg.org/badges/version/cvar)](https://cran.r-project.org/package=cvar)
+[![Build Status](https://travis-ci.com/GeoBosh/cvar.svg?branch=master)](https://travis-ci.com/GeoBosh/cvar)
 #+END_EXPORT
 
 
