prepare for CRAN release; set version to 0.2-0

--- a/vignettes/Guide_cvar.tex
+++ b/vignettes/Guide_cvar.tex
@@ -48,7 +48,7 @@
 
 
 % SweaveOpts{engine=R,eps=FALSE}
-%\VignetteIndexEntry{Inserting references in Rd and roxygen documentation}
+%\VignetteIndexEntry{Brief guide to R package \pkg{cvar}}
 %\VignetteDepends{cvar}
 %\VignetteKeywords{expected shortfall, ES, CVaR, VaR, value at risk}
 %\VignettePackage{cvar}
@@ -85,7 +85,7 @@ function (qf), cumulative distribution function (cdf) or
 probability density function (pdf). Virtually any continuous
 distribution can be specified.
 
-This vignette is part of package \pkg{cvar}, version~0.1-0. %$
+This vignette is part of package \pkg{cvar}, version~0.2-0. %$
 }
 
 \Keywords{expected shortfall, ES, CVaR, VaR, value at risk}
