--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -11,7 +11,7 @@
 }
 
 @Manual{PerformanceAnalytics2018,
-  title = {PerformanceAnalytics: $P$ Econometric Tools for Performance and Risk Analysis},
+  title = {PerformanceAnalytics: Econometric Tools for Performance and Risk Analysis},
   author = {Brian G. Peterson and Peter Carl},
   year = {2018},
   note = {R package version 1.5.2},
@@ -37,4 +37,3 @@
   pages = {38},
   url = {http://www.jstatsoft.org/v25/i07},
 }
-
