--- a/README.org
+++ b/README.org
@@ -27,11 +27,8 @@ The [[https://cran.r-project.org/package=cvar][latest stable version]] is on CRA
 #+BEGIN_EXAMPLE
 install_packages("cvar")
 #+END_EXAMPLE
-The vignette shipping with the package gives illustrative examples.
-=vignette("Guide_cvar", package = "cvar")=.
-(Due to a mixed-up index entry, it appears to have a puzzling title on the [[https://cran.r-project.org/package=cvar][CRAN cvar page]],
-but clicking on it brings up the correct vignette.)
-
+The vignette shipping with the package gives illustrative examples
+(=vignette("Guide_cvar", package = "cvar")=).
 
 You can install the [[https://github.com/GeoBosh/cvar][development version]] of =cvar= from Github:
 #+BEGIN_EXAMPLE
