correct typo in README

--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ and Tasche (2002). Some support for GARCH models is provided, as well.
 
 The [[https://cran.r-project.org/package=cvar][latest stable version]] is on CRAN. 
 #+BEGIN_EXAMPLE
-install_packages("cvar")
+install.packages("cvar")
 #+END_EXAMPLE
 The vignette shipping with the package gives illustrative examples
 (=vignette("Guide_cvar", package = "cvar")=).
