use new-style doi in JSS reference

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -35,5 +35,5 @@
   volume = {25},
   number = {7},
   pages = {38},
-  url = {http://www.jstatsoft.org/v25/i07},
+  doi = {10.18637/jss.v025.i07},
 }
